[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qetrader"
version = "1.0.19"
authors = [
  { name="Scott Zhang", email="scott2011@qq.com" },
]
description = "Quantease Trader SDK for quants"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'chinese_calendar>=1.7.2',
  'ctpwrapper>=6.6.9',
  'Flask>=1.1.1',
  'Flask_Bootstrap>=3.3.7.1',
  'Flask_Compress>=1.12',
  'matplotlib>=3.1.0',
  'nest_asyncio>=1.5.5',
  'numpy>=1.19.2',
  'pandas>=1.3.5',
  'python_dateutil>=2.8.2',
  'qesdk>=0.0.15',
  'quantstats>=0.0.59',
  'redis>=4.3.4',
  'scipy>=1.7.3',
  'passlib>=1.7.4'
]
[project.urls]
"Homepage" = "https://github.com/quantease/qetrader"
"Bug Tracker" = "https://github.com/quantease/qetrader/issues"
